--- a/iCatGenerator/frmMain.resx
+++ b/iCatGenerator/frmMain.resx
@@ -117,4 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="dxValidationProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAQAAAAAADoAgAAFgAAACgAAAAgAAAAQAAAAAEABAAAAAAAgAIAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAwMDAAICAgAAAAP8AAP8AAAD//wD/AAAA/wD/AP//
+        AAD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAB3d3d3d3d3d3d3d3AAAAAAAAAAAAAAAAAAAABwAAAADMzM
+        zMzMzMzMzMzAcAAAAAzO7uzOzs7Ozs7OwHAAAAAAAAAAAAAAAAAADMBwAADMzMzMzMzMzMzMzAdwcAAA
+        zO7uzOzs7Ozs7OwHcHAAAAAAAAAAAAAAAADMB3BwDMzMzMzMzMzMzMzAdwdwcAzO7uzOzs7Ozs7OwHcH
+        cHAMzMzMzMzMzMzMzMB3B3BwD//////////////wdwdwcA8PD/APD/AAAAAP8HcHcHAP////////////
+        //B3B3BwD/8PD/AAAPAAAP/wdwdwcA//////////////8HcHcHAPAADw8A8PAA////B3B3BwD///////
+        ///////wdwdwcAzMzMzMzMzMzMzMwHcHcHAMzu7szs7Ozs7OzsB3B3BwDMzMzMzMzMzMzMzAdwdwcA//
+        ////////////8HcHcHAPDw8AD/DwAPD///B3B3AAD//////////////wdwdwAA8ADwDwAA8PAAAP8HcA
+        AAAP//////////////B3AAAAD/8AAPDw8P8P///wdwAAAA//////////////8AAAAAAPAAAPAA8A/w8A
+        D/AAAAAAD//////////////wAAAAAAAAAAAAAAAAAAAAAAAAAAD//////wAAAfwAAAH8AAAB/AAAAeAA
+        AAHgAAAB4AAAAQAAAAEAAAABAAAAAQAAAAEAAAABAAAAAQAAAAEAAAABAAAAAQAAAAEAAAABAAAAAQAA
+        AAEAAAABAAAAAQAAAAMAAAADAAAAAwAAAB8AAAAfAAAAHwAAAP8AAAD/AAAA/w==
+</value>
+  </data>
 </root>
